[package]
name = "dirge"
version = "0.1.2"
edition = "2024"
description = "Convenient extensions to the standard library's path types"
repository = "https://github.com/daniel-levin/dirge"
license = "Unlicense/MIT"
authors = ["Daniel Levin"]
keywords = ["paths", "filesystem"]
categories = ["os", "filesystem"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
ref-cast = "1"
serde = { version = "1", optional = true, features = ["derive"] }
